[gd_scene load_steps=10 format=4 uid="uid://dajncc80b3rm6"]

[ext_resource type="PackedScene" uid="uid://dfxxpjg5pewr6" path="res://scenes/Cannon.tscn" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://c2856hif7jq5j" path="res://assets/Placeholders/wall.png" id="2_h2yge"]
[ext_resource type="Script" uid="uid://vjfip2rjmto" path="res://scripts/camera_2d.gd" id="3_1bvp3"]
[ext_resource type="Script" uid="uid://chrwhvusr55dm" path="res://scripts/selector.gd" id="3_h2yge"]
[ext_resource type="Texture2D" uid="uid://dan1guf1cv266" path="res://assets/Placeholders/selector.png" id="4_lquwl"]
[ext_resource type="Script" uid="uid://daihyeqoqk3r3" path="res://game_manager.gd" id="6_7mycd"]
[ext_resource type="AudioStream" uid="uid://0jt15cqswbwf" path="res://sounds/beep-07a.wav" id="7_272bh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1bvp3"]
texture = ExtResource("2_h2yge")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_lquwl"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_1bvp3")

[node name="Main" type="Node2D"]

[node name="Grid" type="Node2D" parent="."]

[node name="walls" type="TileMapLayer" parent="Grid"]
tile_map_data = PackedByteArray("AAD8//z/AAAAAAAAAAD9//z/AAAAAAAAAAD+//z/AAAAAAAAAAD///z/AAAAAAAAAAAAAPz/AAAAAAAAAAABAPz/AAAAAAAAAAACAPz/AAAAAAAAAAADAPz/AAAAAAAAAAAEAPz/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAADAAUAAAAAAAAAAAACAAUAAAAAAAAAAAABAAUAAAAAAAAAAAAAAAUAAAAAAAAAAAD//wUAAAAAAAAAAAD+/wUAAAAAAAAAAAD9/wUAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wAAAAAAAAAAAAD8////AAAAAAAAAAD8//7/AAAAAAAAAAD8//3/AAAAAAAAAAD8//v/AAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD7/wUAAAAAAAAAAAD7/wYAAAAAAAAAAAD8/wYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAPz/AAAAAAAAAAAGAPv/AAAAAAAAAAAFAPv/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_lquwl")

[node name="cannons" type="TileMapLayer" parent="Grid"]

[node name="cannon" parent="Grid/cannons" groups=["cannons"] instance=ExtResource("2_0xm2m")]

[node name="Camera2D" type="Camera2D" parent="."]
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 2.5
drag_horizontal_enabled = true
drag_vertical_enabled = true
script = ExtResource("3_1bvp3")
target = NodePath("../selector")

[node name="selector" type="Sprite2D" parent="." node_paths=PackedStringArray("walls_layer")]
texture = ExtResource("4_lquwl")
script = ExtResource("3_h2yge")
walls_layer = NodePath("../Grid/walls")

[node name="GameManager" type="Node" parent="."]
editor_description = "Controls game logic
"
script = ExtResource("6_7mycd")

[node name="PhaseTimer" type="Timer" parent="GameManager"]
editor_description = "The timer between different phases (i.e. Build, Repair, Battle)"
wait_time = 20.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="GameManager"]

[node name="PhaseLabel" type="Label" parent="GameManager/CanvasLayer"]
editor_description = "Displays which phase the player is currently in on the HUD.
"
offset_right = 40.0
offset_bottom = 23.0

[node name="BeepPlayer" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource("7_272bh")

[connection signal="timeout" from="GameManager/PhaseTimer" to="GameManager" method="_on_phase_timer_timeout"]
